Add support of efficient kernel change point detection (#74)
* creation of _detection for hosting C

* adding c kernels and interfaces

* cython configuration

* working first version of kernel l2 calls

* working version with gaussian and linear kernel

* Adding Cython dependency in requirements-dev.txt

* Fixing int creation within for loop declaration

* In the Build workflow, use requirements-dev.txt rather than requirements.txt

* Removing support for python v3.5 since it cannot find a version that satisfies the requirement mkdocstrings

* Add in the CI the build_ext before install

* Removing the --inplace in the build_ext

* For the doc workflow, add the dependencies installation prior to rupture installation

* Adding again --inplace in the CI

* update pip in circleci

* replacing pip install -e . by actual build and install

* removing reference to python3 once venv activated

* Remove ekcpd.c, it is generated and and it is just an artefact of previous filename choses

* Fixing build in the doc workflow

* Build in check-docs in workflows

* Remove requirements.txt and only use requirements-dev.txt

* just forgot test-and-lint.yml

* Try to modify the publish .yml to build the Cython

* Adding some tests and fixing condition on when to call Cython API

* Removing any reference to requirements.txt in the CI

* Adding a new file for the CI to check linting

* Changing actions in order to create a separate action to check for linting and adapt the test action

* should make the the check-linging job fail in github actions

* Removing the line causing the linter check to fail in github actions

* Trying to add support for windows and macos when running the tests

* Removing some condition on the presence of requirements-dev.txt since we know it is here and the condition make it crash in github action for Windows

* Removing the min macro for windows build

* formatting

* minor formattin

* Chan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}
+          - v1-dependencies-{{ checksum "requirements-dev.txt" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
@@ -32,15 +32,16 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip3 install -r requirements.txt
-            pip3 install -r requirements-dev.txt
-            python3 setup.py install
+            python -m pip install --upgrade pip
+            pip install -r requirements-dev.txt
+            python setup.py build_ext --inplace
+            python setup.py install
 
 
       - save_cache:
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}
+          key: v1-dependencies-{{ checksum "requirements-dev.txt" }}
 
       # run tests!
       # this example uses Django's built-in test-runner
