--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -40,14 +40,19 @@ jobs:
         with:
           python-version: '3.7'
 
-      - name: Install cibuildwheel
+      - name: Install cibuildwheel and dependencies
         run: |
+          python -m pip install --upgrade pip
           python -m pip install cibuildwheel
+          pip install -r requirements-dev.txt
+          pip install setuptools wheel twine
 
       - name: Build wheels
         env:
           CIBW_BUILD: cp3.7-${{ matrix.platform_id }}
         run: |
+          python setup.py build_ext --inplace
+          python setup.py sdist bdist_wheel
           python -m cibuildwheel --output-dir wheelhouse
 
       - uses: actions/upload-artifact@v2
