--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         bitness: [32, 64]
+        python: [36, 37, 38]
         include:
           # Run 32 and 64 bit version in parallel for Linux and Windows
           - os: windows-latest
@@ -49,7 +50,7 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: cp37-${{ matrix.platform_id }}
+          CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
         run: |
           python -m cibuildwheel --output-dir wheelhouse
 
