--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -15,6 +15,9 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-latest, windows-latest, macos-latest]
+        exclude:
+          - os: windows-latest
+            python-version: 3.9
 
     runs-on: ${{ matrix.os }}
 
