build(python39): adding py39 to the build workflow

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         bitness: [32, 64]
-        python: [36, 37, 38]
+        python: [36, 37, 38, 39]
         include:
           # Run 32 and 64 bit version in parallel for Linux and Windows
           - os: windows-latest
@@ -34,6 +34,8 @@ jobs:
         exclude:
           - os: macos-latest
             bitness: 32
+          - os: windows-latest
+            python: 39
 
     steps:
       - uses: actions/checkout@v2
