--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -13,8 +13,11 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-latest, windows-latest, macos-latest]
+        exclude:
+          - os: windows-latest
+            python-version: 3.9
 
     runs-on: ${{ matrix.os }}
 
