--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -23,9 +23,15 @@ jobs:
     - name: Run notebooks
       run: |
         jupyter nbconvert --inplace --to notebook --ExecutePreprocessor.kernel_name=python --execute notebooks/*.ipynb
+    - name: Add Binder and download ressources
+      run: |
+        python ./scripts/notebooks_add_binder_download.py
     - name: Build documentation
       run: |
         mkdocs build
+    - name: Add notebooks ressources
+      run: |
+        ./scripts/add_notebooks_to_docs_site.sh
     - uses: actions/upload-artifact@v1
       with:
         name: DocumentationHTML
