docs(doc publish): add the step where we add the resource section

--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Run notebooks
       run: |
         jupyter nbconvert --inplace --to notebook --ExecutePreprocessor.kernel_name=python --execute notebooks/*.ipynb
+    - name: Add Binder and download ressources
+      run: |
+        python ./scripts/notebooks_add_binder_download.py
     - name: Build documentation
       run: |
         mkdocs build
