chore(mkdocs): nbconvert --> mknotebooks
change mkdocs plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,10 +13,11 @@ plugins:
             filters:
               - "!^_"  # exclude all members starting with _
               - "^__init__$"  # but always include __init__ modules and methods
-  - nbconvert:
-      input_dir: notebooks
-      output_dir: notebooks
-      recursive: true
+  - mknotebooks:
+      execute: false
+      binder: false
+  - macros:
+      module_name: mkdocs_macros
 markdown_extensions:
   - pymdownx.snippets:
   - pymdownx.tabbed:
