--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,7 +34,7 @@ nav:
   - Getting started:
     - 'Change point detection?': what-is-cpd.md
     - 'Installation': install.md
-    - 'Basic usage': notebooks/basic-usage.md
+    - 'Basic usage': getting-started/basic-usage.ipynb
     - 'Fitting and predicting': fit-and-predict.md
     - 'Custom cost function': custom-cost-function.md
   - User guide:
@@ -71,10 +71,10 @@ nav:
     - 'Introduction': examples/introduction.md
     - 'Simple usages':
       - 'Introduction': examples/simple-usages-introduction.md
-      - notebooks/basic-usage.md
+      - 'Basic usage': getting-started/basic-usage.ipynb
     - 'Advanced usages':
       - 'Introduction': examples/advanced-usages-introduction.md
-      - notebooks/kernel-cpd-performance-comparison.md
+      - 'Kernel change point detection: a performance comparison': examples/kernel-cpd-performance-comparison.ipynb
   - Code reference:
       - Introduction: code-reference/index.md
       - Base classes: code-reference/base-reference.md
