--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: ruptures
 repo_url: https://github.com/deepcharles/ruptures
+repo_name: deepcharles/ruptures
 docs_dir: docs
 site_dir: site
 plugins:
@@ -28,6 +29,7 @@ markdown_extensions:
   - admonition:
   - toc:
       permalink: "#"
+  - codehilite
 nav:
   - Home:
     - 'Welcome to ruptures': index.md
