chore(pre-commit): remove arg from nbstripout

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
   rev: master
   hooks:
     - id: nbstripout
-      args: [--extra-keys, "metadata.kernelspec.display_name metadata.kernelspec.name"]
+      args: [--extra-keys, "metadata.kernelspec.display_name"]
 -   repo: https://github.com/asottile/blacken-docs
     rev: v1.8.0
     hooks:
