tests(circleci): back to original version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,18 @@
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
-version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.2
+version: 2
 jobs:
   build:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.6.1
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
 
     working_directory: ~/ruptures
 
@@ -31,7 +34,6 @@ jobs:
             . venv/bin/activate
             python -m pip install --upgrade pip
             pip install -r requirements-dev.txt
-            pip install pytest-cov
             python setup.py install
 
 
@@ -41,17 +43,19 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements-dev.txt" }}
 
       # run tests!
+      # this example uses Django's built-in test-runner
+      # other common Python testing frameworks include pytest and nose
+      # https://pytest.org
+      # https://nose.readthedocs.io
       - run:
           name: run tests
           command: |
             . venv/bin/activate
-            py.test --cov=./ --cov-report=xml
+            mkdir test-reports
+            py.test --junitxml=test-reports/junit.xml tests/
 
-      - codecov/upload:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
+      - store_test_results:
+          path: test-reports
 
       - store_artifacts:
-        path: ./coverage.xml
-
-
+          path: test-reports
