--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests, generate coverage report and upload it to codecov
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: coverage
 
 on:
   push:
@@ -31,8 +31,6 @@ jobs:
         pytest --cov-report=xml --cov=ruptures tests/
 
     - name: Upload to Codecov
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       run: |
         bash <(curl -s https://codecov.io/bash)
 
