--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 # Minimum requirements for the build system to execute.
 requires = [
-    "setuptools",
+    "setuptools>=38.3.0",  # version with most `setup.cfg` bugfixes
     "wheel",
     "Cython>=0.28.5",
 
@@ -28,3 +28,4 @@ requires = [
 
     "scipy>=0.19.1",
 ]
+build-backend = "setuptools.build_meta"
