test: add pytest-cov options in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,11 @@ requires = [
     "scipy>=0.19.1",
 ]
 build-backend = "setuptools.build_meta"
+
+# pytest config
+# For more information, see:
+# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "--cov-report=xml --cov-report term:skip-covered --cov=ruptures"
+testpaths = ["tests"]
