--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -1,4 +1,4 @@
-name: check-linting
+name: Check linting
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
     - name: Install pre-commit hooks
       run: |
         python -m pip install --upgrade pip
-        pip install pre-commit
+        python -m pip install pre-commit
     - name: Run pre-commit hooks
       run: |
         pre-commit run --all-files
