--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: Run tests
 
 on:
   push:
@@ -18,9 +18,7 @@ jobs:
         exclude:
           - os: windows-latest
             python-version: 3.9
-
     runs-on: ${{ matrix.os }}
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
