--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include pyproject.toml
-include *.h
-include *.pyx
-include *.pyd
+include ruptures/utils/_utils/*.h
+include ruptures/utils/_utils/*.pyx
+include ruptures/utils/_utils/*.pyd
+include ruptures/detection/_detection/*.h
+include ruptures/detection/_detection/*.pyx
+include ruptures/detection/_detection/*.pyd
