--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install ruptures and dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -vv .[dev]
+        python -m pip install -v .[dev]
     - name: Run notebooks
       run: |
         jupyter nbconvert --inplace --to notebook --ExecutePreprocessor.kernel_name=python --execute $(find ./docs -name '*.ipynb')
