--- a/setup.cfg
+++ b/setup.cfg
@@ -30,12 +30,18 @@ classifiers =
 
 [options]
 zip_safe = True
-packages = ruptures
+packages = find:
 include_package_data = True
 python_requires = >= 3.6
 install_requires =
     numpy
     scipy
+
+[options.packages.find]
+exclude =
+    images
+    docs
+    tests
 
 [options.extras_require]
 display = matplotlib
