ci: print find_packages (debug)

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,18 +30,27 @@ classifiers =
 
 [options]
 zip_safe = True
-packages = find:
+packages =
+    ruptures
+    ruptures.metrics
+    ruptures.costs
+    ruptures.show
+    ruptures.datasets
+    ruptures.utils
+    ruptures.detection
+    ruptures.utils._utils
+    ruptures.detection._detection
 include_package_data = True
 python_requires = >= 3.6
 install_requires =
     numpy
     scipy
 
-[options.packages.find]
-exclude =
-    images
-    docs
-    tests
+# [options.packages.find]
+# exclude =
+#     images
+#     docs
+#     tests
 
 [options.extras_require]
 display = matplotlib
