build: change layout (use src folder) in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,12 @@ python_requires = >= 3.6
 install_requires =
     numpy
     scipy
+packages = find:
+package_dir =
+    =src
+
+[options.packages.find]
+where = src
 
 [options.extras_require]
 display = matplotlib
