--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -25,13 +25,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
     - name: Install ruptures
       run: |
-        python setup.py install
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest
