--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -23,9 +23,7 @@ jobs:
     - name: Install dependencies and ruptures[dev]
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[dev]
-        python -c 'from setuptools import find_packages; print(find_packages())'
-        python -c "import ruptures as rpt"
+        python -m pip install .[test]
     - name: Test with pytest
       run: |
         python -m pytest
