ci: add pytest-cov to ruptures[test] flavour

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,9 @@ where = src
 
 [options.extras_require]
 display = matplotlib
-test = pytest
+test =
+    pytest
+    pytest-cov
 dev =
     jupyter
     matplotlib
