--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[test]
+        python -c "import pytest_cov"
     - name: Test with pytest
       run: |
         python -m pytest
