style: renaming step in gh action

--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Install dependencies and ruptures[dev]
+    - name: Install ruptures
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[test]
