--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,5 @@ build-backend = "setuptools.build_meta"
 # https://docs.pytest.org/en/stable/customize.html#pyproject-toml
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov-report=xml --cov-report=term:skip-covered --cov=src/ruptures"
+addopts = "--cov-report=xml --cov-report=term:skip-covered --cov=src"
 testpaths = ["tests"]
