--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install cibuildwheel and dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install cibuildwheel setuptools wheel twine
+          python -m pip install cibuildwheel twine
 
       - name: Build wheels
         env:
