--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,64 @@
+[metadata]
+name = ruptures
+version = attr: ruptures.__version__
+url = https://github.com/deepcharles/ruptures/
+license = BSD-2-Clause
+license_files = LICENSE
+author = Charles Truong, Laurent Oudre, Nicolas Vayatis
+author_email = charles@doffy.net
+maintainer = Charles Truong, Olivier Boulant
+description = Change point detection for signals in Python.
+long_description = file: README.md
+long_description_content_type = text/markdown
+project_urls =
+    Documentation = https://centre-borelli.github.io/ruptures-docs/
+    Source = https://github.com/deepcharles/ruptures/
+    Bug Tracker = https://github.com/deepcharles/ruptures/issues/
+keywords =
+    change point detection
+    signal segmentation
+    computer science
+    machine learning
+    kernel methods
+    time series
+classifiers =
+    Programming Language :: Python :: 3
+    Operating System :: OS Independent
+    Topic :: Scientific/Engineering :: Mathematics
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+
+[options]
+zip_safe = True
+include_package_data = True
+python_requires = >= 3.6
+install_requires =
+    numpy
+    scipy
+packages = find:
+package_dir =
+    =src
+
+[options.packages.find]
+where = src
+
+[options.extras_require]
+display = matplotlib
+test =
+    pytest
+    pytest-cov
+dev =
+    jupyter
+    matplotlib
+    mkdocs
+    mkdocs-macros-plugin
+    mkdocs-material
+    mkdocstrings
+    mknotebooks
+    pre-commit
+    pymdown-extensions
+    pytest
+    pytest-cov
+
 [build_ext]
 inplace=1
