--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -1,7 +1,9 @@
-# This workflow will install Python dependencies, run tests, generate coverage report and upload it to codecov
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# This workflow will install Python dependencies, run tests, generate coverage
+# report and upload it to codecov.
+# For more information, see:
+# https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: coverage
+name: Run tests with coverage
 
 on:
   push:
@@ -14,26 +16,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.x
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
-        pip install pytest-cov
     - name: Install ruptures
       run: |
-        python setup.py install
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
     - name: Test with pytest
       run: |
-        pytest --cov-report=xml --cov=ruptures tests/
-
+        python -m pytest
     - name: Upload to Codecov
       run: |
         bash <(curl -s https://codecov.io/bash)
-
     - uses: actions/upload-artifact@v2
       with:
         path: coverage.xml
