--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: Run tests
 
 on:
   push:
@@ -18,22 +18,17 @@ jobs:
         exclude:
           - os: windows-latest
             python-version: 3.9
-
     runs-on: ${{ matrix.os }}
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt
     - name: Install ruptures
       run: |
-        python setup.py install
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest
